# XGBoostPredictPrice

./: 20220511result.xlsx  GetData.py  README.en.md  README.md  example.env  getData.py  pyproject.toml  requirements.txt  setup.cfg  sometools.py  xgboostmodel.py
tests/: test_GetData.py  test_getData.py  test_sometools.py  test_xgboostmodel.py
