[metadata]
name = XGBoostPredictPrice
description = "使用XGBoost预测n日后的股价"
long_description = file: README.md
author =Jerry
author_email = your@email.com
url = https://github.com/chenxiong888/XGBoostPredictPrice
license = EPL License 1.0
version = 0.0.1

[options]
zip_safe = True
packages = find:
install_requires =
    numpy
    pandas
    pytest
